--- a/css/_base.scss
+++ b/css/_base.scss
@@ -16,3 +16,13 @@ body{
     width: 50%;
 }
 
+.a-items-center{
+    align-items: center;
+}
+.jc-flex-end{
+    justify-content: flex-end;
+}
+
+.b-radius-100{
+    border-radius: 100%;
+}
