--- a/css/style.css
+++ b/css/style.css
@@ -38,4 +38,33 @@ nav {
   border: solid 1px red;
   height: 70px;
 }
+
+.l-aside {
+  width: 20%;
+  min-height: 800px;
+  background-color: #F0F0F0;
+}
+
+.l-aside .l-aside-prim {
+  margin-top: 0px;
+  width: 90%;
+  min-height: 400px;
+  background-color: #F0F0F0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.l-aside .l-aside-prim ul {
+  list-style: none;
+}
+
+.l-aside .l-aside-prim ul a {
+  display: block;
+  color: black;
+  padding: 2px;
+  margin-bottom: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  text-decoration: none;
+}
 /*# sourceMappingURL=style.css.map */
