--- a/css/style.css
+++ b/css/style.css
@@ -42,13 +42,13 @@ nav {
 .l-aside {
   width: 20%;
   min-height: 800px;
-  background-color: #F0F0F0;
+  background-color: red;
 }
 
 .l-aside .l-aside-prim {
   margin-top: 0px;
   width: 90%;
-  min-height: 400px;
+  min-height: 300px;
   background-color: #F0F0F0;
   margin-left: auto;
   margin-right: auto;
@@ -65,6 +65,53 @@ nav {
   margin-bottom: 5px;
   margin-left: auto;
   margin-right: auto;
+  text-decoration: none;
+}
+
+.l-aside .l-aside-sec {
+  margin-top: 0px;
+  width: 90%;
+  min-height: 250px;
+  background-color: #F0F0F0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.l-aside .l-aside-sec ul {
+  list-style: none;
+}
+
+.l-aside .l-aside-sec ul a {
+  display: block;
+  color: black;
+  padding: 2px;
+  margin-bottom: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  text-decoration: none;
+}
+
+.l-aside .l-aside-sec .mytags {
+  background-color: #F0F0F0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.l-aside .l-aside-ter {
+  margin-top: 0px;
+  width: 98%;
+  min-height: 400px;
+  background-color: blue;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.l-aside .l-aside-ter .imgshop {
+  height: 50%;
+  width: 100%;
+}
+
+.l-aside .l-aside-ter a {
   text-decoration: none;
 }
 /*# sourceMappingURL=style.css.map */
