--- a/css/_leftAside.scss
+++ b/css/_leftAside.scss
@@ -2,6 +2,8 @@
     width: 20%;
     min-height: 800px;
     background-color: $main-color ;
+    /*Se pone display none hasta que crezca a tablet se muestre, no antes*/
+    display: none;
     .l-aside-prim{
         margin-top: 0px;
         width: 90%;
@@ -75,5 +77,16 @@
     
 
 }
+
+/*Tablet version*/
+
+
+@media screen and (min-width: 768px){
+    .l-aside{
+        display: block;
+    }
+}
+
+/*END Tablet version*/
 
     
