--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -1,4 +1,21 @@
-$main-color:#F0F0F0;
+$main-color: #EEF0F1; 
+$font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+$highlight-color: #3B49DF; 
+$highlight-active: #323EBE;
+$inactive-gray-light: #4D5760;
+$inactive-gray: #363D44;
+$saveBtn-inactive-gray: #D2D6DB;
+$saveBtn-active-gray: #B5BDC4;
+$asideLeft-active-gray: #E2E4E6;
+$asideRight-bg-color: #F9FAFA; 
+$asideRight-active: white; 
+$navPosts-active: #EEF0F1;
+$logo-active: #363D44;
+$profilePicture-menu-active: #F2F2F3;
+$saved-active: #3B49DF;
+$saved-bg-active: #DCDFEF;
+$footer-bg-color: #D8DBDF;
+
 
 
 
