--- a/css/_navBar.scss
+++ b/css/_navBar.scss
@@ -1,12 +1,51 @@
 nav{
     height: 70px;;
-    i{
-        cursor: pointer;
-
-    }
-    img{
-        cursor: pointer;
-
-    }
+    background-color:white ;
+    font-family: $font-family ;
     
+
+    .lefthead{
+        i{
+            cursor: pointer;
+            margin-left: 25px;
+            margin-right: 20px;
+            font-size: 25px;
+           
+    
+        }
+        img{
+            cursor: pointer;
+            
+        }
+        input{
+            margin-left: 10px;
+            padding: 6px;
+            border: 1px solid $inactive-gray-light;
+            border-radius: 5px;
+            
+            margin-right: 16px;
+            font-size: 19px;
+            
+        }
+        
+            
+          
+
+    }
+    .righthead{
+        i{
+            cursor: pointer;
+            margin-right: 20px;
+            font-size: 25px;
+            
+        }
+        img{
+            cursor: pointer;
+            margin-right: 20px;
+            
+                
+        }
+
+    }
+       
 }
