--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0%;
   padding: 0%;
-  background-color: #F0F0F0;
+  background-color: #EEF0F1;
 }
 
 .f-dir-column {
@@ -43,20 +43,46 @@ body {
 
 nav {
   height: 70px;
+  background-color: white;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-nav i {
+nav .lefthead i {
+  cursor: pointer;
+  margin-left: 25px;
+  margin-right: 20px;
+  font-size: 25px;
+}
+
+nav .lefthead img {
   cursor: pointer;
 }
 
-nav img {
+nav .lefthead input {
+  margin-left: 10px;
+  padding: 6px;
+  border: 1px solid #4D5760;
+  border-radius: 5px;
+  margin-right: 16px;
+  font-size: 19px;
+}
+
+nav .righthead i {
   cursor: pointer;
+  margin-right: 20px;
+  font-size: 25px;
+}
+
+nav .righthead img {
+  cursor: pointer;
+  margin-right: 20px;
 }
 
 .l-aside {
   width: 20%;
   min-height: 800px;
-  background-color: #F0F0F0;
+  background-color: #EEF0F1;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   /*Se pone display none hasta que crezca a tablet se muestre, no antes*/
   display: none;
 }
@@ -65,7 +91,7 @@ nav img {
   margin-top: 0px;
   width: 90%;
   min-height: 300px;
-  background-color: #F0F0F0;
+  background-color: #EEF0F1;
   margin-left: auto;
   margin-right: auto;
 }
@@ -88,7 +114,7 @@ nav img {
   margin-top: 0px;
   width: 90%;
   min-height: 250px;
-  background-color: #F0F0F0;
+  background-color: #EEF0F1;
   margin-left: auto;
   margin-right: auto;
 }
@@ -100,21 +126,22 @@ nav img {
 .l-aside .l-aside-sec ul a {
   display: block;
   color: black;
-  padding: 2px;
   margin-bottom: 5px;
+  padding: 2px;
   margin-left: auto;
   margin-right: auto;
   text-decoration: none;
 }
 
 .l-aside .l-aside-sec .mytags {
-  background-color: #F0F0F0;
+  background-color: #EEF0F1;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 0px;
 }
 
 .l-aside .l-aside-ter {
-  border: 1px solid #F0F0F0;
+  border: 1px solid #EEF0F1;
   border-radius: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -177,5 +204,60 @@ nav img {
   margin-top: 10px;
   border-top: solid 1px lightgray;
   border-bottom: solid 1px lightgray;
+}
+
+footer {
+  background-color: #D8DBDF;
+  position: relative;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+}
+
+footer div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+footer div a {
+  color: #363D44;
+  margin: 3px 6px;
+  text-decoration: none;
+}
+
+footer div p {
+  color: #4D5760;
+}
+
+footer div p b {
+  color: #363D44;
+}
+
+.perezoso {
+  position: absolute;
+  width: 52px;
+  top: -2px;
+  right: 38px;
+}
+
+.social-media img {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 10px;
+  fill: currentColor;
+  color: #363D44;
 }
 /*# sourceMappingURL=style.css.map */
