--- a/css/_leftAside.scss
+++ b/css/_leftAside.scss
@@ -1,26 +1,25 @@
 .l-aside{
     width: 20%;
     min-height: 800px;
-    background-color: $main-color ;
+    background-color:$main-color ;
     font-family: $font-family ;
     /*Se pone display none hasta que crezca a tablet se muestre, no antes*/
     display: none;
     .l-aside-prim{
         margin-top: 0px;
-        width: 90%;
+        width: 99%;
         min-height: 300px;
         background-color:$main-color ;
-        margin-left: auto;
-        margin-right: auto;
+        
+        
         ul{
             list-style: none;
+            padding-inline-start: 8px;
             a{
             display: block;
             color: black; 
             padding: 2px;
-            margin-bottom: 5px;
-            margin-left: auto;
-            margin-right: auto; 
+            margin-bottom: 5px; 
             text-decoration: none;
             
             }
@@ -32,25 +31,26 @@
         margin-top: 0px;
         width: 90%;
         min-height: 250px;
-        background-color:$main-color ;
-        margin-left: auto;
+        background-color: $main-color ;
+        margin-left: 10px;
         margin-right: auto;
         
         ul{
             list-style: none;
+            padding-inline-start: 10px;
             a{
             display: block;
             color: black;
             margin-bottom: 5px;
-            padding: 2px;
-            margin-left: auto;
+            
+            margin-left: 10px;
             margin-right: auto; 
             text-decoration: none; 
             }     
         }
         .mytags{
             background-color: $main-color ;
-            margin-left: auto;
+            
             margin-right: auto; 
             margin-bottom: 0px;
             
@@ -70,7 +70,10 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
-            border-radius: 1rem;   
+            border-radius: 1rem; 
+           
+             
+             
         }
         .imgshop-text{
             padding: 1rem;
