--- a/css/_base.scss
+++ b/css/_base.scss
@@ -3,6 +3,12 @@ body{
     padding: 0%;
     background-color:$main-color;   
 }
+/*.main{
+    margin-left: 80px;
+    margin-right: 80px;
+    
+
+}*/
 
 .f-dir-column{
     flex-direction: column;
