--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,12 @@ body {
   background-color: #EEF0F1;
 }
 
+/*.main{
+    margin-left: 80px;
+    margin-right: 80px;
+    
+
+}*/
 .f-dir-column {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -62,6 +68,86 @@ body {
 .gray-comments {
   opacity: 0.5;
   font-size: 1rem;
+}
+
+.right-cards {
+  background-color: #F9FAFA;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 12px;
+  margin: 15px 15px 15px 15px;
+}
+
+.right-cards .card-footer {
+  text-align: center;
+  border-bottom: none;
+}
+
+.right-cards header {
+  background-color: #F9FAFA;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom: 1px solid #eef0f1;
+  padding: 12px 16px;
+  border-radius: 12px;
+}
+
+.right-cards header a {
+  color: #363D44;
+}
+
+.right-cards header:hover a {
+  color: #3B49DF;
+}
+
+.right-cards a {
+  text-decoration: none;
+}
+
+.right-cards ul {
+  list-style: none;
+  padding: 0px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: block;
+}
+
+.right-cards ul li {
+  border-bottom: 1px solid #eef0f1;
+  padding: 8px 20px;
+}
+
+.right-cards ul li:hover {
+  background-color: #F9FAFA;
+}
+
+.right-cards ul li:hover p {
+  color: #3B49DF;
+}
+
+.right-cards ul li span {
+  font-size: smaller;
 }
 
 nav {
