Se crea el query para desktop del right aside

--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,7 @@ body {
   margin: 0%;
   padding: 0%;
   background-color: #EEF0F1;
-<<<<<<< HEAD
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 0.9rem;
-=======
->>>>>>> 5dde6c54f1927175ed699b99377dd273e35051a6
 }
 
 .f-dir-column {
@@ -68,6 +64,98 @@ body {
   border-radius: 100%;
 }
 
+#right-aside {
+  display: none;
+}
+
+#right-aside .right-cards {
+  background-color: #F9FAFA;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 12px;
+  margin: 15px 15px 15px 15px;
+}
+
+#right-aside .right-cards .card-footer {
+  text-align: center;
+  border-bottom: none;
+}
+
+#right-aside .right-cards header {
+  background-color: #F9FAFA;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom: 1px solid #eef0f1;
+  padding: 12px 16px;
+  border-radius: 12px;
+}
+
+#right-aside .right-cards header a {
+  color: #363D44;
+}
+
+#right-aside .right-cards header:hover a {
+  color: #3B49DF;
+}
+
+#right-aside .right-cards a {
+  text-decoration: none;
+}
+
+#right-aside .right-cards ul {
+  list-style: none;
+  padding: 0px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: block;
+}
+
+#right-aside .right-cards ul li {
+  border-bottom: 1px solid #eef0f1;
+  padding: 8px 20px;
+}
+
+#right-aside .right-cards ul li:hover {
+  background-color: #F9FAFA;
+}
+
+#right-aside .right-cards ul li:hover p {
+  color: #3B49DF;
+}
+
+#right-aside .right-cards ul li span {
+  font-size: smaller;
+}
+
+/*Desktop version*/
+@media screen and (min-width: 1024px) {
+  #right-aside {
+    display: block;
+  }
+}
+
+/*END Desktop version*/
 nav {
   height: 70px;
   background-color: white;
@@ -109,10 +197,7 @@ nav .righthead img {
   width: 20%;
   min-height: 800px;
   background-color: #EEF0F1;
-<<<<<<< HEAD
-=======
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
->>>>>>> 5dde6c54f1927175ed699b99377dd273e35051a6
   /*Se pone display none hasta que crezca a tablet se muestre, no antes*/
   display: none;
 }
@@ -122,11 +207,6 @@ nav .righthead img {
   width: 99%;
   min-height: 300px;
   background-color: #EEF0F1;
-<<<<<<< HEAD
-  margin-left: auto;
-  margin-right: auto;
-=======
->>>>>>> 5dde6c54f1927175ed699b99377dd273e35051a6
 }
 
 .l-aside .l-aside-prim ul {
@@ -148,11 +228,7 @@ nav .righthead img {
   width: 90%;
   min-height: 250px;
   background-color: #EEF0F1;
-<<<<<<< HEAD
-  margin-left: auto;
-=======
   margin-left: 10px;
->>>>>>> 5dde6c54f1927175ed699b99377dd273e35051a6
   margin-right: auto;
 }
 
@@ -173,10 +249,6 @@ nav .righthead img {
 
 .l-aside .l-aside-sec .mytags {
   background-color: #EEF0F1;
-<<<<<<< HEAD
-  margin-left: auto;
-=======
->>>>>>> 5dde6c54f1927175ed699b99377dd273e35051a6
   margin-right: auto;
   margin-bottom: 0px;
 }
@@ -219,6 +291,7 @@ nav .righthead img {
 /*END Tablet version*/
 /*Card Principal*/
 .main-card {
+  font-size: 0.9rem;
   background: white;
   border-top: solid 1px lightgray;
   border-bottom: solid 1px lightgray;
@@ -234,7 +307,7 @@ nav .righthead img {
 }
 
 .main-card .main-text .card-comment {
-  background-color: lightgray;
+  background-color: #F7F7F7;
   width: 98%;
   margin-left: auto;
   margin-right: auto;
@@ -305,11 +378,8 @@ nav .righthead img {
 
 /*END Tablet version*/
 footer {
-<<<<<<< HEAD
   margin-top: 30px;
   display: none;
-=======
->>>>>>> 5dde6c54f1927175ed699b99377dd273e35051a6
   background-color: #D8DBDF;
   position: relative;
   -webkit-box-sizing: border-box;
@@ -363,7 +433,6 @@ footer div p b {
   fill: currentColor;
   color: #363D44;
 }
-<<<<<<< HEAD
 
 /*Tablet version*/
 @media screen and (min-width: 768px) {
@@ -373,6 +442,4 @@ footer div p b {
 }
 
 /*END Tablet version*/
-=======
->>>>>>> 5dde6c54f1927175ed699b99377dd273e35051a6
 /*# sourceMappingURL=style.css.map */
