--- a/css/_main.scss
+++ b/css/_main.scss
@@ -1,6 +1,7 @@
 /*Card Principal*/
 
 .main-card{
+    font-size: 0.9rem;
     background: white;
     border-top: solid 1px lightgray;
     border-bottom: solid 1px lightgray;
@@ -14,7 +15,7 @@
     }
     .main-text{
         .card-comment{
-            background-color: lightgray;
+            background-color: #F7F7F7;
             width: 98%;
             margin-left: auto;
             margin-right: auto;
