--- a/css/_base.scss
+++ b/css/_base.scss
@@ -20,6 +20,10 @@ body{
     display: flex;
 }
 
+.d-none{
+    display: none;
+}
+
 .w-100{
     width: 100%;
 }
@@ -39,7 +43,18 @@ body{
     margin-left: 40px;
 }
 
+.mr-20{
+    margin-right: 20px;
+}
+.ml-20{
+    margin-left: 20px;
+}
+
 .m-sides-10{
+    margin: 0px 10px;
+}
+
+.m-sides-5{
     margin: 0px 10px;
 }
 
