Se cambian los títulos, de modifica favicon y se arreglan margenes de los asides y de los iconos del nav para que queden a la altura de los asides

--- a/css/_leftAside.scss
+++ b/css/_leftAside.scss
@@ -1,5 +1,6 @@
 .l-aside{
-    width: 20%;
+    margin-left: 5vw;
+    max-width: 50%;
     min-height: 800px;
     background-color:$main-color ;
     font-family: $font-family ;
