--- a/css/_main.scss
+++ b/css/_main.scss
@@ -1,5 +1,6 @@
 /*Card Principal*/
 
+
 .main-card{
     cursor: pointer;
     font-size: 0.9rem;
@@ -115,6 +116,9 @@
 
 
 @media screen and (min-width: 768px){
+    main{
+        margin-right: 8px;
+    }
     .main-card{
         .head-img{
             padding: 0%;
@@ -138,7 +142,7 @@
             }
             margin: 0px 3px;
             border: none;
-            width: 50px;
+            width: 60px;
             height: 40px;
             border-radius: 5px 5px 0px 0px;
             font-size: 1rem;
