Se coloca padding al footer

--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,4 +1,5 @@
 footer {
+    padding: 50px 0px;
     margin-top: 30px;
     display: none;
     background-color: $footer-bg-color;
@@ -36,7 +37,7 @@ footer {
     margin: 10px;
     fill: currentColor;
     color: $inactive-gray;
-    
+
 
 }
 
