--- a/css/style.css
+++ b/css/style.css
@@ -508,6 +508,7 @@ nav .righthead button {
 
 /*END Tablet version*/
 footer {
+  padding: 50px 0px;
   margin-top: 30px;
   display: none;
   background-color: #D8DBDF;
