--- a/css/_navBar.scss
+++ b/css/_navBar.scss
@@ -49,6 +49,12 @@ nav{
             height: 40px;
             text-decoration: none;
             font-size: 1rem;
+            cursor: pointer;
+            transition-duration: 0.3s;
+            &:hover{
+                background-color: #4405C8;
+                transition-duration: 0.3s;
+            }
         }
         
 
